--- a/src/test/resources/nginx.conf
+++ b/src/test/resources/nginx.conf
@@ -30,7 +30,11 @@ http {
     server_name  localhost;
 
     location / {
-      proxy_pass http://bootapp:8080/;
+      rewrite ^/proxied-weather/(.*)$ /weather/$1 break;
+      proxy_pass http://bootapp:8080;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
   }
 }
