--- a/pom.xml
+++ b/pom.xml
@@ -1,144 +1,146 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.sonatype.oss</groupId>
-		<artifactId>oss-parent</artifactId>
-		<version>7</version>
-	</parent>
-	<groupId>de.codecentric</groupId>
-  <artifactId>cxf-spring-boot-starter-system-tests</artifactId>
-	<version>1.1.1-SNAPSHOT</version>
-  <name>cxf-spring-boot-starter-system-tests</name>
-  <packaging>jar</packaging>
-  <url>https://github.com/codecentric/cxf-spring-boot-starter-system-tests</url>
-	<licenses>
-		<license>
-			<name>Apache License, Version 2.0</name>
-			<url>http://opensource.org/licenses/Apache-2.0</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
-	<developers>
-		<developer>
-			<name>Jonas Hecht</name>
-			<email>jonas.hecht@codecentric.de</email>
-			<organization>codecentric AG</organization>
-			<organizationUrl>http://www.codecentric.de</organizationUrl>
-    </developer>
-    <developer>
-      <name>Marco Paga</name>
-      <email>marco.paga@codecentric.de</email>
-      <organization>codecentric AG</organization>
-      <organizationUrl>http://www.codecentric.de</organizationUrl>
-    </developer>
-	</developers>
-	<scm>
-    <connection>scm:git:git://github.com/codecentric/cxf-spring-boot-starter-system-tests.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/codecentric/cxf-spring-boot-starter-system-tests.git</developerConnection>
-		<url>git@github.com:/codecentric/cxf-spring-boot-starter.git</url>
-	</scm>
-	<distributionManagement>
-	   <repository>
-	     <id>oss.sonatype.org</id>
-	     <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-	   </repository>
-	   <snapshotRepository>
-	     <id>oss.sonatype.org</id>
-	     <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-	   </snapshotRepository>
-	</distributionManagement>
-	<properties>
-		<cxf-spring-boot-starter-maven-plugin.version>1.1.1-SNAPSHOT</cxf-spring-boot-starter-maven-plugin.version>
-		<java.version>1.8</java.version>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<spring.boot.version>1.4.4.RELEASE</spring.boot.version>
-		<cxf.version>3.1.9</cxf.version>
-		<fluent-hc.version>4.5.2</fluent-hc.version>
-		<!-- Analysis Tools for CI -->
-		<build-plugin.jacoco.version>0.7.8</build-plugin.jacoco.version>
-		<build-plugin.coveralls.version>4.3.0</build-plugin.coveralls.version>
-		<!-- Exclude generated JAXB-Java-Classes from Sonar-Analysis -->
-		<sonar.exclusions>**/target/generated-sources/wsdlimport/**</sonar.exclusions>
-	</properties>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-dependencies</artifactId>
-				<version>${spring.boot.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+    <groupId>de.codecentric</groupId>
+    <artifactId>cxf-spring-boot-starter-system-tests</artifactId>
+    <version>1.1.1-SNAPSHOT</version>
+    <name>cxf-spring-boot-starter-system-tests</name>
+    <packaging>jar</packaging>
+    <url>https://github.com/codecentric/cxf-spring-boot-starter-system-tests</url>
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://opensource.org/licenses/Apache-2.0</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <name>Jonas Hecht</name>
+            <email>jonas.hecht@codecentric.de</email>
+            <organization>codecentric AG</organization>
+            <organizationUrl>http://www.codecentric.de</organizationUrl>
+        </developer>
+        <developer>
+            <name>Marco Paga</name>
+            <email>marco.paga@codecentric.de</email>
+            <organization>codecentric AG</organization>
+            <organizationUrl>http://www.codecentric.de</organizationUrl>
+        </developer>
+    </developers>
+    <scm>
+        <connection>scm:git:git://github.com/codecentric/cxf-spring-boot-starter-system-tests.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/codecentric/cxf-spring-boot-starter-system-tests.git
+        </developerConnection>
+        <url>git@github.com:/codecentric/cxf-spring-boot-starter.git</url>
+    </scm>
+    <distributionManagement>
+        <repository>
+            <id>oss.sonatype.org</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+        <snapshotRepository>
+            <id>oss.sonatype.org</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+    <properties>
+        <cxf-spring-boot-starter-maven-plugin.version>1.1.1-SNAPSHOT</cxf-spring-boot-starter-maven-plugin.version>
+        <java.version>1.8</java.version>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <spring.boot.version>1.4.4.RELEASE</spring.boot.version>
+        <cxf.version>3.1.9</cxf.version>
+        <fluent-hc.version>4.5.2</fluent-hc.version>
+        <!-- Analysis Tools for CI -->
+        <build-plugin.jacoco.version>0.7.8</build-plugin.jacoco.version>
+        <build-plugin.coveralls.version>4.3.0</build-plugin.coveralls.version>
+        <!-- Exclude generated JAXB-Java-Classes from Sonar-Analysis -->
+        <sonar.exclusions>**/target/generated-sources/wsdlimport/**</sonar.exclusions>
+    </properties>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-	<dependencies>
+    <dependencies>
 
-		<dependency>
-			<groupId>de.codecentric</groupId>
-			<artifactId>cxf-spring-boot-starter</artifactId>
-			<version>1.1.1-SNAPSHOT</version>
-		</dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>cxf-spring-boot-starter</artifactId>
+            <version>1.1.1-SNAPSHOT</version>
+        </dependency>
 
-    <!-- Test -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+        <!-- Test -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>com.github.stefanbirkner</groupId>
-			<artifactId>system-rules</artifactId>
-			<version>1.16.1</version>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>com.github.stefanbirkner</groupId>
+            <artifactId>system-rules</artifactId>
+            <version>1.16.1</version>
+            <scope>test</scope>
+        </dependency>
 
-		<dependency>
-			<groupId>org.testcontainers</groupId>
-			<artifactId>testcontainers</artifactId>
-			<version>1.1.8</version>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.1.8</version>
+            <scope>test</scope>
+        </dependency>
 
-	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<phase>pre-integration-test</phase>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
-			<plugin>
-				<groupId>de.codecentric</groupId>
-				<artifactId>cxf-spring-boot-starter-maven-plugin</artifactId>
-				<version>${cxf-spring-boot-starter-maven-plugin.version}</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			
-			<plugin>
-				<groupId>org.eluder.coveralls</groupId>
-				<artifactId>coveralls-maven-plugin</artifactId>
-				<version>${build-plugin.coveralls.version}</version>
-			</plugin>
+            <plugin>
+                <groupId>de.codecentric</groupId>
+                <artifactId>cxf-spring-boot-starter-maven-plugin</artifactId>
+                <version>${cxf-spring-boot-starter-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>${build-plugin.coveralls.version}</version>
+            </plugin>
 
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -154,69 +156,69 @@
                 </executions>
             </plugin>
 
-			<plugin>
-				<groupId>com.spotify</groupId>
-				<artifactId>docker-maven-plugin</artifactId>
-				<version>0.4.11</version>
-				<configuration>
-					<imageName>${project.groupId}/${project.artifactId}</imageName>
-					<dockerDirectory>src/main/resources/docker/java-service</dockerDirectory>
-					<resources>
-						<resource>
-							<targetPath>/</targetPath>
-							<directory>${project.build.directory}</directory>
-							<include>${project.build.finalName}.jar</include>
-						</resource>
-					</resources>
-				</configuration>
-			</plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.4.11</version>
+                <configuration>
+                    <imageName>${project.groupId}/${project.artifactId}</imageName>
+                    <dockerDirectory>src/main/resources/docker/java-service</dockerDirectory>
+                    <resources>
+                        <resource>
+                            <targetPath>/</targetPath>
+                            <directory>${project.build.directory}</directory>
+                            <include>${project.build.finalName}.jar</include>
+                        </resource>
+                    </resources>
+                </configuration>
+            </plugin>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.surefire</groupId>
-						<artifactId>surefire-junit47</artifactId>
-						<version>2.12</version>
-					</dependency>
-				</dependencies>
-				<configuration>
-					<excludes>
-						<exclude>**</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>2.12</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <excludes>
+                        <exclude>**</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
 
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.19.1</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-	
-	<repositories>
-		<repository>
-			<id>spring-releases</id>
-			<name>Spring Releases</name>
-			<url>https://repo.spring.io/libs-release</url>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>spring-releases</id>
-			<url>https://repo.spring.io/libs-release</url>
-		</pluginRepository>
-	</pluginRepositories>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.19.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <repositories>
+        <repository>
+            <id>spring-releases</id>
+            <name>Spring Releases</name>
+            <url>https://repo.spring.io/libs-release</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>spring-releases</id>
+            <url>https://repo.spring.io/libs-release</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
