Healthchecks removed from dockerfile
These were currently not used anywhere.

--- a/src/main/resources/docker/java-service/Dockerfile
+++ b/src/main/resources/docker/java-service/Dockerfile
@@ -2,8 +2,6 @@ FROM frolvlad/alpine-oraclejdk8:slim
 EXPOSE 8080
 VOLUME /tmp
 ADD cxf-spring-boot-starter-system-tests-*.jar app.jar
-RUN sh -c 'touch /app.jar && apk add --no-cache curl'
-HEALTHCHECK --interval=10s --timeout=5s \
-  CMD curl -f http://localhost:8080/weather/Weather?wsdl || exit 1
+RUN sh -c 'touch /app.jar'
 ENV JAVA_OPTS=""
 ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar" ]
