--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,10 @@
         </snapshotRepository>
     </distributionManagement>
     <properties>
+        <spring.boot.version>1.5.2.RELEASE</spring.boot.version>
         <cxf-spring-boot-starter.version>1.1.1.RELEASE</cxf-spring-boot-starter.version>
-        <cxf-spring-boot-starter-maven-plugin.version>1.1.1-SNAPSHOT</cxf-spring-boot-starter-maven-plugin.version>
+        <cxf-spring-boot-starter-maven-plugin.version>1.1.1.RELEASE</cxf-spring-boot-starter-maven-plugin.version>
+        <testcontainers.version>1.2.0</testcontainers.version>
         <java.version>1.8</java.version>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -104,7 +106,7 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
-            <version>1.1.8</version>
+            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
 
