--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
         </snapshotRepository>
     </distributionManagement>
     <properties>
-        <spring.boot.version>1.5.2.RELEASE</spring.boot.version>
+        <spring.boot.version>1.5.3.RELEASE</spring.boot.version>
         <cxf-spring-boot-starter.version>1.1.1.RELEASE</cxf-spring-boot-starter.version>
         <cxf-spring-boot-starter-maven-plugin.version>1.1.1.RELEASE</cxf-spring-boot-starter-maven-plugin.version>
         <testcontainers.version>1.2.0</testcontainers.version>
@@ -62,10 +62,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <spring.boot.version>1.4.4.RELEASE</spring.boot.version>
         <cxf.version>3.1.9</cxf.version>
-        <fluent-hc.version>4.5.2</fluent-hc.version>
         <!-- Analysis Tools for CI -->
         <build-plugin.jacoco.version>0.7.8</build-plugin.jacoco.version>
-        <build-plugin.coveralls.version>4.3.0</build-plugin.coveralls.version>
         <!-- Exclude generated JAXB-Java-Classes from Sonar-Analysis -->
         <sonar.exclusions>**/target/generated-sources/wsdlimport/**</sonar.exclusions>
     </properties>
@@ -97,13 +95,6 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.stefanbirkner</groupId>
-            <artifactId>system-rules</artifactId>
-            <version>1.16.1</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
             <version>${testcontainers.version}</version>
@@ -116,7 +107,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>1.5.2.RELEASE</version>
+                <version>${spring.boot.version}</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -141,48 +132,6 @@
             </plugin>
 
             <plugin>
-                <groupId>org.eluder.coveralls</groupId>
-                <artifactId>coveralls-maven-plugin</artifactId>
-                <version>${build-plugin.coveralls.version}</version>
-            </plugin>
-
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <version>0.4.11</version>
-                <configuration>
-                    <imageName>${project.groupId}/${project.artifactId}</imageName>
-                    <dockerDirectory>src/main/resources/docker/java-service</dockerDirectory>
-                    <resources>
-                        <resource>
-                            <targetPath>/</targetPath>
-                            <directory>${project.build.directory}</directory>
-                            <include>${project.build.finalName}.jar</include>
-                        </resource>
-                    </resources>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.surefire</groupId>
-                        <artifactId>surefire-junit47</artifactId>
-                        <version>2.12</version>
-                    </dependency>
-                </dependencies>
-                <configuration>
-                    <excludes>
-                        <exclude>**</exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-
-
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.19.1</version>
@@ -195,6 +144,7 @@
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
     </build>
 
